fix Overflow

--- a/assets/css/_config/_layout.scss
+++ b/assets/css/_config/_layout.scss
@@ -60,6 +60,7 @@
 
 	@include medium-or-more {
 		flex-basis: calc(#{$n * 100%} - #{(1 - $n) * column_gap() });
+		overflow:   hidden;
 	}
 }
 
